--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header><!--titulo-->
+      <h1>Conoce quienes vivieron en las casas de Howgarts</h1>
+      <article>
+      <p>Breve descripción de la distribución de las casas</p>
+      </article>
+      <main>
+
+      <section>
+      <article id= "Griffindor">Gryffindor</article>
+      <article id= "hufflepuff">Hufflepuff</article>
+      <article id= "Ravenclaw">Ravenclaw</article>
+      <article id= "Slytherin">Slytherin</article>
+      </section>
+
     <div id="root"></div>
     <script type="module" src="main.js"></script>
   </body>
