--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,91 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header><!--titulo-->
-      <h1>Conoce quienes vivieron en las casas de Howgarts</h1>
+    <!--Primer pagina. Introducción a la tematica de la plataforma, con ingreso de nombre de usuario-->
+    <header>
+      <div id= "pagina1">
+
+      <h1>El mundo mágico <br/>
+        de<br/>
+         Harry Potter<br/></h1>
+      <p>Hola aprendiz de mago ven y conoce este fantastico mundo, lleno de mágia y aventuras</p>
+      <p>Soy Hedwig, y yo te compañaré a dar tus primeros vuelos en este increible mundo<br/>
+        mmmm pero antes de entrar dime,<br/>
+         ¿Cuál es tu nombre?</br>
+      </p>
+
+      <input type="text" id="name" placeholder= "Aquí su nombre joven mago">
+      <p>Da click en el hechizo y comencemos a explorar</p>
+      <input type="submit" id="boton" type="button" class="button" value="Alohomora">
+      </div>
+      </header>
+
+      <!--pagina 2 con el menú de mavegacion-->
+      <section>
+      <div id="pagina2">
+      <h2>Bienvenido</h2>
+      <p id="user"></p>
+      <p>En el mundo mágico cualquier cosa puede ocurrir, gracias al poder de la mágia</p>
+      <input type="submit" id="HogwartsyCasas" type="button" class="button" value="Hogwarts y sus Casas">
+      <input type="submit" id="Patronus" type="button" class="button" value="Patronus">
+      <input type="submit" id="RegistrodeNacimientos" type="button" class="button" value="Registro de Nacimientos">
+      <input type="submit" id="VaritasMagicas" type="button" class="button" value="Varitas Magicas">
+      <input type="submit" id="MásdeHarry" type="button" class="button" value="Más de Harry">
+      <input type="submit" id="DatosCuriosos" type="button" class="button" value="Datos Curiosos">
+      </section>
+      <!--pagina 3 con la historia de hogwats y las casas-->
+      <div id="pagina3">
+      <h2>Hogwarts</h2>
       <article>
-      <p>Breve descripción de la distribución de las casas</p>
+      <p> Existen 11 escuelas mágicas que son las encargadas de educar a los jovenes magos del planeta,
+         estas escuelas están en ubicaciones secretas para ocultarse de los muggles</p>
+      <p>Una de estas escuelas es la prestigiosa Hogwarts fue fundada hace más de mil años por cuatro poderosos magos: <br/>
+        Godric Gryffindor, Salazar Slytherin, Rowena Ravenclaw y Helga Hufflepuff.<br/>
+         Eligieron dividir a los estudiantes en cuatro 'casas', cada una con sus apellidos y presentando jóvenes magos y brujas que mostraban habilidades y personalidades distintas.<br/>
+
+
+      <p>Para hacer esto, Godric Gryffindor usó su sombrero mágico, en adelante conocido como el Sombrero Seleccionador, para decidir qué niños irían a qué casa, <br/>
+        y así ha sido desde entonces con una Ceremonia de Clasificación anual que coloca a cada nuevo alumno en su propio hogar.<br/>
+        Las cuatro casas tienen diferentes requisitos de entrada, y el viejo Sombrero Seleccionador las resumió en su canción de bienvenida ...</p>
       </article>
-      <main>
+
+      <h3>Quieres saber que personajes pertenecian a esas casas y que los caracterizaba?</h3>
+      <!--<main>-->
 
       <section>
+      <input type="submit" id="botonGrif" type="button" class="button" value="Gryffindor">
       <article id= "Griffindor">Gryffindor</article>
-      <article id= "hufflepuff">Hufflepuff</article>
-      <article id= "Ravenclaw">Ravenclaw</article>
-      <article id= "Slytherin">Slytherin</article>
-      </section>
+      <p>"Podrías pertenecer a Gryffindor,<br/>
+        donde habitan los valientes de corazón,<br/>
+        su osadía, nervios y caballería<br/>
+        distinguen a Gryffindors".</p>
+      <article id= "PersonGriffindor"></article>
 
+      <input type="submit" id="botonHuff" type="button" class="button" value="Hufflepuff">
+      <article id= "Hufflepuff">Hufflepuff</article>
+      <p>"Podrías pertenecer a Hufflepuff,<br/>
+          donde son justos y leales.<br/>
+          Esos pacientes Hufflepuff son verdaderos<br/>
+          y no temen el trabajo"</br>
+      <article id= "PersonHufflepuff"></article>
+
+      <input type="submit" id="botonRave" type="button" class="button" value="Ravenclaw">
+      <article id= "Ravenclaw">Ravenclaw</article>
+      <p>O, sin embargo, en el viejo y sabio Ravenclaw,<br/>
+        si tienes una mente preparada,<br/>
+        donde aquellos con ingenio y aprendizaje<br/>
+        siempre encontrarán su especie".<br/>
+        <article id= "PersonRavenclaw"></article>
+
+      <input type="submit" id="botonSlyt" type="button" class="button" value="Slytherin">
+      <article id= "Slytherin">Slytherin</article>
+      <p>"O tal vez en Slytherin<br/>
+        harás tus verdaderos amigos.<br/>
+        Esa gente astuta usa cualquier medio<br/>
+        para lograr sus fines".</br>
+
+      </section>
+    </div>
     <div id="root"></div>
     <script type="module" src="main.js"></script>
   </body>
