--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Fontdiner+Swanky&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
   </head>
   <body >
-    <!--Primer pagina. Introducción a la tematica de la plataforma, con ingreso de nombre de usuario-->
+         <!--Primer pagina. Introducción a la tematica de la plataforma, con ingreso de nombre de usuario-->
     <header>
       <div id= "pagina1">
         <div class="titlePrincipal">
         <h1>El mundo Magico<br/>
         de<br/>
          Harry Potter<br/></h1>
-         <img src="img/harrylogo.png" class="harrilogo"width="100px"height="100px">
-    </div>
+        <img src="img/harrylogo.png" class="harrilogo"width="100px"height="100px">
+        </div>
+
       <h2 class="saludoPag1">Hola aprendiz de mago ven y conoce este fantastico mundo, lleno de mágia y aventuras</h2>
        <p class="HedwigPresentacion">Soy Hedwig, y yo te compañaré a dar tus primeros vuelos en este increible mundo<br/>
         mmmm pero antes de entrar dime,<br/>
@@ -25,84 +27,102 @@
        <input type="text"class="inputName" id="name" required minlength="3" maxlength="20"  placeholder= "Aquí su nombre joven mago"/>
        <p class="HedwigInstruccion">Da click en el hechizo y comencemos a explorar  <button id="boton" class="buttonAlohomora">alohomora</button></p>--
       </div>
-      </header>
+    </header>
 
-      <!--pagina 2 con el menú de mavegacion-->
-      <section>
+               <!--pagina 2 con el menú de mavegacion-->
+    <section>
       <div id="pagina2">
+
        <p id="user" class="saludopag2"></p>
        <p class="hedwigPag2">En el mundo mágico cualquier cosa puede ocurrir, gracias al poder de la mágia</p>
-       <article ><img src="img/4casas.jpeg" id="HogwartsyCasas"  class="logo" alt="Horelativegwarts y sus Casas" height="200px"width="200px">
-        <h3 class="hogwarts">Casas de hogwats</h3>
-       </article>
-       <article><img src="img/patronus.jpg"id="patronus" class="logo1" alt="patronus" height="200px"width="200px">
-        <h3 class="patronum">Expecto Patronum </h3>
-       </article>
-       <article><img src="img/varitas.jpg" id="varitas" class="logo2" alt="varitas" height="200px"width="200px">
-        <h3 class="varitas">Varitas magicas</h3>
-       </article>
-       <article><img src="img/images.jpeg" id="HogwartsyCasas"  class="logo3" alt="Hogwarts y sus Casas" height="200px"width="200px">
-        <h3 class="sangre">Tipo de sangre</h3>
-       </article>
-       <article> <img src="img/hagrit.jpg" id="HogwartsyCasas"  class="logo4" alt="Hogwarts y sus Casas" height="200px"width="200px">
-         <h3 class="maestros">Maestros</h3>
-       </article>
-       </section>
 
-      <!--pagina 3 con la historia de hogwats y las casas-->
-      <div id="pagina3">
-      <h2 class="titlepag3">Hogwarts</h2>
-       <article class="textoPag3">
-        <p> Existen 11 escuelas mágicas que son las encargadas de educar a los jovenes magos del planeta,
-         estas escuelas están en ubicaciones secretas para ocultarse de los muggles.
+     <article ><img src="img/hatAnimado.jpg" id="pepecho" class="logo"  height="200px"width="200px">
+        <h3 class="hogwarts"></h3>
+     </article>
+     <article><img src="img/"id="patronus" class="logo1" alt="patronus" height="200px"width="200px">
+        <h3 class="patronum"></h3>
+     </article>
+     <article><img src="img/" id="varitas" class="logo2" alt="varitas" height="200px"width="200px">
+        <h3 class="varitas"></h3>
+     </article>
+     <article><img src="img/" id="HogwartsyCasas"  class="logo3" alt="Hogwarts y sus Casas" height="200px"width="200px">
+        <h3 class="sangre"></h3>
+     </article>
+     <article> <img src="img/" id="HogwartsyCasas"  class="logo4" alt="Hogwarts y sus Casas" height="200px"width="200px">
+         <h3 class="maestros"></h3>
+     </article>
+    </section>
+
+             <!--pagina 3 con la historia de hogwats y las casas-->
+    <div id="pagina3">
+      <div class="basio">divtransparente</div>
+      <div class="contenedorTitle"><h2>Hogwarts </h2></div>
+        <div class="contenedorSnitch"><img src="img/snitch.png" class="snitch"></div>
+           <!--descripcion pag3-->
+        <div class="explicacionDeHogwarts">
+        <img src="img/hogwartsAnimacion.jpg" class="imgHogwartsAnimado" >
+        <p> <span class="existenPag3">E</span>xisten 11 escuelas mágicas que son las encargadas de educar a los jovenes magos del planeta,
+         estas escuelas están en ubicaciones secretas para ocultarse de los muggles.<br>
          Una de estas escuelas es la prestigiosa Hogwarts fue fundada hace más de mil años por cuatro poderosos magos: 
          Godric Gryffindor, Salazar Slytherin, Rowena Ravenclaw y Helga Hufflepuff.
          Eligieron dividir a los estudiantes en cuatro 'casas', cada una con sus apellidos y presentando jóvenes magos y brujas que mostraban habilidades y personalidades distintas.</p>
-
-
-       <p>Para hacer esto, Godric Gryffindor usó su sombrero mágico, en adelante conocido como el Sombrero Seleccionador, para decidir qué niños irían a qué casa, <br/>
+        </div>
+        <div class="git_sombreroseleccionador">
+        <img src="img/hatAnimado.jpg" class="imgSombreroSeleccionador">
+        <p>Para hacer esto, Godric Gryffindor usó su sombrero mágico, en adelante conocido como el Sombrero Seleccionador para decidir qué niños irían a qué casa,
         y así ha sido desde entonces con una Ceremonia de Clasificación anual que coloca a cada nuevo alumno en su propio hogar.<br/>
-        Las cuatro casas tienen diferentes requisitos de entrada, y el viejo Sombrero Seleccionador las resumió en su canción de bienvenida ...</p>
-      </article>
+        Las cuatro casas tienen diferentes requisitos de entrada, y el viejo Sombrero Seleccionador las resumió en su canción de bienvenida ...<br/>
+        <p class="preguntaPag3">Quieres saber que personajes pertenecian a esas casas y que los caracterizaba?</p></p>
+        </div>
+      <!--SECCION DE 4 ESCUDOS DE HOGWATRS-->        
+    <section class="casas_de_hogwarts">
 
-      <h3 class="hedwigPag3">Quieres saber que personajes pertenecian a esas casas y que los caracterizaba?</h3>
-      <!--<main>-->
-
-      <section>
-      <img src="img/gryffindor-harry-potter 2.png" id="botonGrif"  class="imgG" width="100px" height="100px">
-      <article id= "articleGriffindor">Gryffindor</article>
-       <p>"Podrías pertenecer a Gryffindor,<br/>
+     <div class="casaGryffindor">
+       <div class="logos4CsasaHogwarts">
+         <img src="img/gryffindor-harry-potter 2.png" id="botonGryf"  class="imglogos" width="100px" height="100px">
+       </div>
+        <h4>Gryffindor</h4>
+        <p>"Podrías pertenecer a Gryffindor,<br/>
         donde habitan los valientes de corazón,<br/>
         su osadía, nervios y caballería<br/>
         distinguen a Gryffindors".</p>
-      <article id= "PersonGriffindor"></article>
+      <article id= "PersonGryffindor"class="span_gryffindor"></article>
+     </div>
 
-      <img src="img/hufflepuff-harry-potter 2.png" id="botonHuff"  class="imgH" width="100px" height="100px" >
-      <article id= "articleHufflepuff">Hufflepuff</article>
-      <p>"Podrías pertenecer a Hufflepuff,<br/>
+     <div class="casaHufflepuff">
+      <img src="img/hufflepuff-harry-potter 2.png" id="botonHuff"  class="imglogos" width="100px" height="100px" >
+       <h4>Hufflepuff</h4>
+       <p>"Podrías pertenecer a Hufflepuff,<br/>
           donde son justos y leales.<br/>
           Esos pacientes Hufflepuff son verdaderos<br/>
           y no temen el trabajo"</br>
-      <article id= "PersonHufflepuff"></article>
+      <article id= "PersonHufflepuff" class="span_hufflepuff"></article>
+    </div>
 
-      <img src="img/ravenclaw-harry-potter 2.png" id="botonRave" class="imgR"  width="100px" height="100px"  >
-      <article id= "articleRavenclaw">Ravenclaw</article>
-      <p>O, sin embargo, en el viejo y sabio Ravenclaw,<br/>
+      <div class="casaRavenclaw">
+      <img src="img/ravenclaw-harry-potter 2.png" id="botonRave" class="imglogos"  width="100px" height="100px"  >
+        <h4>Ravenclaw</h4>
+        <p>O, sin embargo, en el viejo y sabio Ravenclaw,<br/>
         si tienes una mente preparada,<br/>
         donde aquellos con ingenio y aprendizaje<br/>
         siempre encontrarán su especie".<br/>
-        <article id= "PersonRavenclaw"></article>
+        <article id= "PersonRavenclaw" class="span_ravenclaw"></article>
+       </div>
 
-      <img src="img/slytherin-harry-potter 2.png" id="botonSlyt"  class="imgS" width="100px" height="100px" >
-      <article id= "articleSlytherin">Slytherin</article>
-      <p>"O tal vez en Slytherin<br/>
+      <div class="casaSlytherin">
+      <img src="img/slytherin-harry-potter 2.png" id="botonSlyt"  class="imglogos" width="100px" height="100px" >
+       <h4>Slytherin</h4>
+       <p>"O tal vez en Slytherin<br/>
         harás tus verdaderos amigos.<br/>
         Esa gente astuta usa cualquier medio<br/>
         para lograr sus fines".</br>
-        <article id= "PersonSlytherin"></article>
-      </section>
-    </div>
-    <div id="root"></div>
+        <article id= "PersonSlytherin"class="span_slytherin"></article>
+      </div>
+      <div class="contenedorBtn3"> <img src="img/pngocean.com (3).png" id="boton_pag3" class="btnRegresarPag3" /></div> 
+  </section>
+    
+
+   
     <script type="module" src="main.js"></script>
-  </body>
+   </body>
 </html>
