se agrego funcionalidad a los botones pag3

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
           donde son justos y leales.<br/>
           Esos pacientes Hufflepuff son verdaderos<br/>
           y no temen el trabajo"</br>
-      <article id= "PersonHufflepuff" class="span_hufflepuff"></article>
+      <article id = "PersonHufflepuff" class="span_hufflepuff"></article>
     </div>
 
       <div class="casaRavenclaw">
@@ -120,7 +120,18 @@
       </div>
       <div class="contenedorBtn3"> <img src="img/pngocean.com (3).png" id="boton_pag3" class="btnRegresarPag3" /></div> 
   </section>
-    
+   <!--<section>
+      <div class="overlay" id="overlay"></div>
+      <div class="modals" id="modal">
+        <div class="modal-contenedor hide" id="modal-content">
+          <img src="" alt="" width="170"height="256">
+          <p>datos</p>
+        </div>
+        <div class="modal-btn" id="hide-modal">
+          <button class="modal-btn" id="hide-modal">cerrar</button>
+        </div>
+      </div >
+    </section>--> 
 
    
     <script type="module" src="main.js"></script>
