--- a/src/index.html
+++ b/src/index.html
@@ -67,14 +67,17 @@
 
       <!--pagina 3 con la historia de hogwats y las casas-->
       <div id="pagina3">
-      <h2 class="titlepag3">Hogwarts</h2>
-       <article class="textoPag3">
-        <p> Existen 11 escuelas mágicas que son las encargadas de educar a los jovenes magos del planeta,
-         estas escuelas están en ubicaciones secretas para ocultarse de los muggles.
-         Una de estas escuelas es la prestigiosa Hogwarts fue fundada hace más de mil años por cuatro poderosos magos:
-
-         Godric Gryffindor, Salazar Slytherin, Rowena Ravenclaw y Helga Hufflepuff.
-         Eligieron dividir a los estudiantes en cuatro 'casas', cada una con sus apellidos y presentando jóvenes magos y brujas que mostraban habilidades y personalidades distintas.</p>
+        <div class="basio">divtransparente</div>
+        <div class="contenedorTitle"><h2>Hogwarts </h2></div>
+        <div class="contenedorSnitch"><img src="img/snitch.png" class="snitch"></div>
+                 <!--descripcion pag3-->
+        <div class="explicacionDeHogwarts">
+        <img src="img/hogwartsAnimacion.jpg" class="imgHogwartsAnimado" >
+        <p> <span class="existenPag3">E</span>xisten 11 escuelas mágicas que son las encargadas de educar a los jovenes magos del planeta,
+               estas escuelas están en ubicaciones secretas para ocultarse de los muggles.<br>
+               Una de estas escuelas es la prestigiosa Hogwarts fue fundada hace más de mil años por cuatro poderosos magos:
+               Godric Gryffindor, Salazar Slytherin, Rowena Ravenclaw y Helga Hufflepuff.
+               Eligieron dividir a los estudiantes en cuatro 'casas', cada una con sus apellidos y presentando jóvenes magos y brujas que mostraban habilidades y personalidades distintas.</p>
         </div>
         <div class="git_sombreroseleccionador">
         <img src="img/hatAnimado.jpg" class="imgSombreroSeleccionador">
